@@ -65,6 +65,7 @@ extern "C" {
 #define ZIP_FL_NODIR		2 /* ignore directory component */
 #define ZIP_FL_COMPRESSED	4 /* read compressed data */
 #define ZIP_FL_UNCHANGED	8 /* use original data, ignoring changes */
+#define ZIP_FL_RECOMPRESS      16 /* force recompression of data */
 
 /* archive global flags flags */
 
